--- a/UserProfiles/templates/friends/friends_list.html
+++ b/UserProfiles/templates/friends/friends_list.html
@@ -56,7 +56,7 @@
                                         <img src="{% static 'avatars/default_profile_pic.jpg'%}" class="avatarFriends rounded-circle mb-3">
                                         {% endif %}
                                         <div class="event-wrap text-center">
-                                            <h4><a href="/profile/{{ znajomy.username }} ">{{ znajomy.username }}</a>
+                                            <h4 style="color: #cf057c;">{{ znajomy.username }}
                                             </h4>
                                         </div>
                                     </div>
