--- a/static/css/style.css
+++ b/static/css/style.css
@@ -361,35 +361,13 @@ header.masthead .bg-circle-4 {
     border-radius: 0.5rem;
     background: #fff;
 }
-.profile-img{
-    text-align: center;
-}
+
 .profile-img img{
     width: 70%;
-    height: 100%;
+    height: 70%;
+    border: 1px solid black;
 }
-.profile-img .file {
-    position: relative;
-    overflow: hidden;
-    margin-top: -20%;
-    width: 70%;
-    border: none;
-    border-radius: 0;
-    font-size: 15px;
-    background: #212529b8;
-}
-.profile-img .file input {
-    position: absolute;
-    opacity: 0;
-    right: 0;
-    top: 0;
-}
-.profile-head h5{
-    color: #333;
-}
-.profile-head h6{
-    color: #0062cc;
-}
+
 .profile-edit-btn{
     border: none;
     border-radius: 1.5rem;
@@ -398,16 +376,6 @@ header.masthead .bg-circle-4 {
     font-weight: 600;
     color: #6c757d;
     cursor: pointer;
-}
-.proile-rating{
-    font-size: 12px;
-    color: #818182;
-    margin-top: 5%;
-}
-.proile-rating span{
-    color: #495057;
-    font-size: 15px;
-    font-weight: 600;
 }
 .profile-head .nav-tabs{
     margin-bottom:5%;
@@ -420,15 +388,10 @@ header.masthead .bg-circle-4 {
     border: none;
     border-bottom:2px solid #0062cc;
 }
-.profile-work{
-    padding: 14%;
-    margin-top: -15%;
-}
+
 .profile-work p{
-    font-size: 12px;
-    color: #818182;
+    font-size: 15px;
     font-weight: 600;
-    margin-top: 10%;
 }
 .profile-work a{
     text-decoration: none;
@@ -611,8 +574,8 @@ td .text-center h5{
 }
 
 .avatarFriends{
-    width: 70%;
-    height: 70%;
+    width: 60%;
+    height: 60%;
 }
 
 .listyZnajomych2{
@@ -651,5 +614,10 @@ td .text-center h5{
     background-color: #023E8A;
     color: white;
     border: 1px solid #023E8A;
+}
+
+.myProfileFriends .row .col-md-4{
+    margin-left: 0px;
+    margin-top: 2%;
 }
 
