Przycisk testowy kolor -> Znajomi

--- a/static/css/style.css
+++ b/static/css/style.css
@@ -586,9 +586,9 @@ td .text-center h5{
 }
 
 .friendsButtons{
-    background-color: #0096C7;
+    background-color: #cf057c;
     color: white;
-    border: 1px solid #0096C7;
+    border: 1px solid #cf057c;
     margin-bottom: 5%;
 }
 
