--- a/UserProfiles/templates/profile/edit.html
+++ b/UserProfiles/templates/profile/edit.html
@@ -4,53 +4,71 @@
 {% block content %}
 
 <div class="container emp-profile">
-<script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
-{% if messages %}
-<div id="alert-container">
-    {% for message in messages %}
-    <div class="alert alert-info alert-dismissible fade show" role="alert">
-        {{ message }}
-        <button type="button" class="close przyciskAlert" data-dismiss="alert" aria-label="Close">
-            <span aria-hidden="true">&times;</span>
-        </button>
+    <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
+    {% if messages %}
+    <div id="alert-container">
+        {% for message in messages %}
+        <div class="alert alert-info alert-dismissible fade show" role="alert">
+            {{ message }}
+            <button type="button" class="close przyciskAlert" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endfor %}
     </div>
-    {% endfor %}
-</div>
 
-<script>
+    <script>
         setTimeout(function() {
           $('.alert').alert('close');
         }, 3000);
 
-</script>
-{% endif %}
+    </script>
+    {% endif %}
     <div class="row">
         <div class="col-md-4">
-            <div class="profile-img">
+            <div class="profile-img" style="text-align:center">
                 <img src="{% static 'avatars/' %}{{ avatar_url }}" class="rounded-circle mb-3"
                      alt="Avatar"/>
-                <!--                            <div class="file btn btn-lg btn-primary">-->
-                <!--                                Change Photo-->
-                <!--                                <input type="file" name="file"/>-->
-                <!--                            </div>-->
+                <h3 class="odstepNazwa">
+                    {{ request.user.username }}
+                </h3>
             </div>
+
         </div>
         <div class="col-md-8 ">
             <div class="profile-headEdit">
-                <h3 class="odstepNazwa">
-                    @{{ request.user.username }}
-                </h3>
                 {% if edit == null %}
                 <a href="avatar-change/">
-                    <button class="btn btn-sm rounded-pill profilButtonsEdit">Zmień awatar</button>
+                    <button class="btn btn-lg rounded-pill profilButtonsEdit">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                             class="bi bi-person-bounding-box" viewBox="0 0 16 16">
+                            <path d="M1.5 1a.5.5 0 0 0-.5.5v3a.5.5 0 0 1-1 0v-3A1.5 1.5 0 0 1 1.5 0h3a.5.5 0 0 1 0 1zM11 .5a.5.5 0 0 1 .5-.5h3A1.5 1.5 0 0 1 16 1.5v3a.5.5 0 0 1-1 0v-3a.5.5 0 0 0-.5-.5h-3a.5.5 0 0 1-.5-.5M.5 11a.5.5 0 0 1 .5.5v3a.5.5 0 0 0 .5.5h3a.5.5 0 0 1 0 1h-3A1.5 1.5 0 0 1 0 14.5v-3a.5.5 0 0 1 .5-.5m15 0a.5.5 0 0 1 .5.5v3a1.5 1.5 0 0 1-1.5 1.5h-3a.5.5 0 0 1 0-1h3a.5.5 0 0 0 .5-.5v-3a.5.5 0 0 1 .5-.5"/>
+                            <path d="M3 14s-1 0-1-1 1-4 6-4 6 3 6 4-1 1-1 1zm8-9a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                        </svg>
+                        Zmień awatar
+                    </button>
                 </a>
                 <br>
                 <a href="password-change/">
-                    <button class="btn btn-sm rounded-pill profilButtonsEdit">Zmień hasło</button>
+                    <button class="btn btn-lg rounded-pill profilButtonsEdit">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                             class="bi bi-key-fill" viewBox="0 0 16 16">
+                            <path d="M3.5 11.5a3.5 3.5 0 1 1 3.163-5H14L15.5 8 14 9.5l-1-1-1 1-1-1-1 1-1-1-1 1H6.663a3.5 3.5 0 0 1-3.163 2zM2.5 9a1 1 0 1 0 0-2 1 1 0 0 0 0 2"/>
+                        </svg>
+                        Zmień hasło
+
+                    </button>
                 </a>
                 <br>
                 <a href="/profile/{{ request.user.username }}/">
-                    <button class="btn btn-sm rounded-pill profilButtonsEdit">Powrót</button>
+                    <button class="btn btn-lg rounded-pill profilButtonsEdit">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                             class="bi bi-arrow-left-square-fill" viewBox="0 0 16 16">
+                            <path d="M16 14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2zm-4.5-6.5H5.707l2.147-2.146a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L5.707 8.5H11.5a.5.5 0 0 0 0-1"/>
+                        </svg>
+
+                        Powrót
+                    </button>
                 </a>
 
                 {% elif edit %}
@@ -58,12 +76,25 @@
                 <form method="post" enctype="multipart/form-data">
                     {% csrf_token %}
                     {{ form.as_p }}
-                    <button class="btn btn-sm rounded-pill profilButtonsEdit" type="submit">Zmień</button>
+                    <button class="btn btn-lg rounded-pill profilButtonsEdit" type="submit">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                             class="bi bi-check-square-fill" viewBox="0 0 16 16">
+                            <path d="M2 0a2 2 0 0 0-2 2v12a2 2 0 0 0 2 2h12a2 2 0 0 0 2-2V2a2 2 0 0 0-2-2zm10.03 4.97a.75.75 0 0 1 .011 1.05l-3.992 4.99a.75.75 0 0 1-1.08.02L4.324 8.384a.75.75 0 1 1 1.06-1.06l2.094 2.093 3.473-4.425a.75.75 0 0 1 1.08-.022z"/>
+                        </svg>
+
+                        Zmień
+                    </button>
                 </form>
                 {% endif %}
                 {% if edit != null %}
                 <a href="/profile/{{ request.user.username }}/edit">
-                    <button class="btn btn-sm rounded-pill profilButtonsEdit">Powrót</button>
+                    <button class="btn btn-lg rounded-pill profilButtonsEdit">
+                        <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                             class="bi bi-arrow-left-square-fill" viewBox="0 0 16 16">
+                            <path d="M16 14a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2V2a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2zm-4.5-6.5H5.707l2.147-2.146a.5.5 0 1 0-.708-.708l-3 3a.5.5 0 0 0 0 .708l3 3a.5.5 0 0 0 .708-.708L5.707 8.5H11.5a.5.5 0 0 0 0-1"/>
+                        </svg>
+                        Powrót
+                    </button>
                 </a>
                 {% endif %}
 
@@ -71,4 +102,4 @@
         </div>
     </div>
 </div>
-    {% endblock %}
+{% endblock %}
