imie+nazwisko znajomych na profilu

--- a/UserProfiles/templates/profile/profile.html
+++ b/UserProfiles/templates/profile/profile.html
@@ -136,9 +136,8 @@
                                     {% endif %}
                                     <a href="/profile/{{ friend.username }}">{{ friend.username }}</a>
                                     <div class="media-body overflow-hidden">
-                                        <h5 class="card-text mb-0">{{ friend.user_first_name }} {{ friend.user_last_name }}</h5>
-                                        <p class="card-text text-uppercase text-muted">TUUU TRZEBA WYŁUSKAĆ IMIE I
-                                            NAZWISKO</p>
+                                        <h5 class="card-text mb-0"></h5>
+                                        <p class="card-text text-uppercase text-muted">{{ friend.first_name }} {{ friend.last_name }}</p>
                                         <p class="card-text">
                                         </p>
                                     </div>
