--- a/UserProfiles/templates/profile/profile.html
+++ b/UserProfiles/templates/profile/profile.html
@@ -1,7 +1,90 @@
 {% extends "main/base.html" %}
 {% load static %}
-{% block title %} Profil - {{ request.user.username }} {% endblock %}
+{% block title %} Profil - {{ user_username }} {% endblock %}
 {% block content %}
+
+{% if viewFriendList %}
+<div style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%); z-index: 2;
+    width: 100vw;
+    height: 100vh;
+    background-color: rgba(128, 128, 128, 0.7);">
+
+</div>
+<div style="position: fixed; top: 50%; left: 50%; transform: translate(-50%, -50%);z-index: 3">
+    <a href="/profile/{{ user_username }}/">
+        <button>Powrót</button>
+    </a>
+    <div class="event-schedule-area-two listyZnajomych2">
+    <div class="row">
+        <div class="col-lg-12">
+            <div class="tab-content" id="myTabContent">
+                <div class="tab-pane fade active show" id="home" role="tabpanel">
+                    <div class="table-responsive">
+                        {% if friendsList %}
+                        <table class="table">
+                            <thead>
+                            <tr>
+                                <th class="text-center col-3 align-middle">Znajomy</th>
+                                <th class="text-center col-3 align-middle">Dane użytkownika</th>
+                                <th class="text-center col-3 align-middle">Profil</th>
+                            </tr>
+                            </thead>
+                            <tbody>
+                            {% for znajomy in friendsList %}
+                            <tr class="inner-box">
+                                <td class="align-middle">
+                                    <div class="d-flex flex-column align-items-center">
+                                        {% if znajomy.profiluzytkownika.avatar %}
+                                        <img src="{% static 'avatars/'%}{{ znajomy.profiluzytkownika.avatar }}"
+                                             class="avatarFriends rounded-circle mb-3">
+                                        {% else %}
+                                        <img src="{% static 'avatars/default_profile_pic.jpg'%}" class="avatarFriends rounded-circle mb-3">
+                                        {% endif %}
+                                        <div class="event-wrap text-center">
+                                            <h4 style="color: #cf057c;">{{ znajomy.username }}
+                                            </h4>
+                                        </div>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="text-center">
+                                        <h5>{{ znajomy.first_name }} {{ znajomy.last_name }}</h5>
+                                    </div>
+                                </td>
+                                <td>
+                                    <div class="text-center">
+                                        <a href="/profile/{{znajomy.username}}/">
+                                            <button type="button" class="btn btn-lg rounded-pill friendsButtons">
+                                                <svg xmlns="http://www.w3.org/2000/svg" width="32" height="32" fill="currentColor"
+                                                     class="bi bi-person-circle" viewBox="0 0 16 16">
+                                                    <path d="M11 6a3 3 0 1 1-6 0 3 3 0 0 1 6 0"/>
+                                                    <path fill-rule="evenodd"
+                                                          d="M0 8a8 8 0 1 1 16 0A8 8 0 0 1 0 8m8-7a7 7 0 0 0-5.468 11.37C3.242 11.226 4.805 10 8 10s4.757 1.225 5.468 2.37A7 7 0 0 0 8 1"/>
+                                                </svg>
+                                                Zobacz profil
+                                            </button>
+                                        </a>
+                                    </div>
+                                </td>
+                            </tr>
+                            {% endfor %}
+                            </tbody>
+                        </table>
+                        {% else %}
+                        <div class="text-center noFriends">
+                            <h1>Ten użytkownik nie ma znajomych!</h1>
+                        </div>
+                        {% endif %}
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</div>
+</div>
+{% endif %}
+
+
 <div class="container emp-profile">
     <div class="row">
         <div class="col-md-4 text-center align-middle">
@@ -122,7 +205,7 @@
             {% if friendsList %}
             <div class="myProfileFriends">
                 <div class="row">
-                    {% for friend in friendsList %}
+                    {% for friend in friendsList|slice:":3" %}
                     <div class="col-md-4 mb-4">
                         <div class="card">
                             <div class="card-body">
@@ -137,7 +220,8 @@
                                     <a href="/profile/{{ friend.username }}">{{ friend.username }}</a>
                                     <div class="media-body overflow-hidden">
                                         <h5 class="card-text mb-0"></h5>
-                                        <p class="card-text text-uppercase text-muted">{{ friend.first_name }} {{ friend.last_name }}</p>
+                                        <p class="card-text text-uppercase text-muted">{{ friend.first_name }}
+                                            {{ friend.last_name }}</p>
                                         <p class="card-text">
                                         </p>
                                     </div>
@@ -146,6 +230,8 @@
                         </div>
                     </div>
                     {% endfor %}
+                    <h2><a href="/profile/{{ user_username }}/friend-list/">wszyscy znajomi</a></h2>
+
                     {% else %}
                     <h2>Brak znajomych</h2>
 
@@ -168,6 +254,5 @@
             </div>
         </div>
     </div>
-
 </div>
 {% endblock %}
