--- a/static/css/style.css
+++ b/static/css/style.css
@@ -62,56 +62,8 @@
     border: 1px solid #023E8A;
 }
 
-.form-container {
-    margin: 0 auto;
-    width: 80%;
-}
-
-.form-container label {
-    display: block;
-    margin-bottom: 5px;
-}
-
-.form-container input[type="text"],
-.form-container textarea {
-    width: 100%; /
-    padding: 8px;
-    margin-bottom: 10px;
-}
-
 nav{
     background-color: #023E8A;
-}
-
-.createListForm{
-    margin-bottom: 15%;
-    margin-top: 3%;
-    margin-right: 2%;
-    background-color: #0096C7;
-    color: white;
-    border: 1px solid #0096C7;
-}
-
-.createListForm:hover{
-    background-color: #023E8A;
-    color: white;
-    border: 1px solid #023E8A;
-}
-
-.createListFormR{
-    margin-bottom: 15%;
-    margin-top: 3%;
-    margin-left: 2%;
-    float: right;
-    background-color: #0096C7;
-    color: white;
-    border: 1px solid #0096C7;
-}
-
-.createListFormR:hover{
-    background-color: #023E8A;
-    color: white;
-    border: 1px solid #023E8A;
 }
 
 .deleteRightButton{
@@ -237,12 +189,6 @@ nav{
 .przyciskRejestracja a{
     color: white;
     text-decoration: none;
-}
-
-.wyrownanieDoLewej{
-    margin-top: 5%;
-    margin-bottom: 5%;
-    width: 100%;
 }
 
 .przyciskAlert{
@@ -620,4 +566,77 @@ td .text-center h5{
     margin-left: 0px;
     margin-top: 2%;
 }
+
+/* createList.html */
+
+.createListBox{
+    width:70%
+    padding: 3%;
+    margin-top: 2%;
+    margin-left: 3%;
+    margin-right: 3%;
+    margin-bottom: 3%;
+    box-shadow: 5px 5px 10px rgba(0,0,0,0.5);
+    border-radius: 0.5rem;
+    background: #fff;
+}
+
+.createListTitle{
+    margin-top: 1.5%;
+    margin-bottom: 1%;
+    width: 100%;
+    text-align: center;
+}
+
+.createListFormButton{
+    background-color: #cf057c;
+    color: white;
+    border: 1px solid #cf057c;
+    width: 40%;
+    margin-left: 1%;
+    margin-top: 5%;
+}
+
+.createListFormButtonSave{
+    background-color: #cf057c;
+    color: white;
+    border: 1px solid #cf057c;
+    width: 40%;
+    float: right;
+    margin-bottom: 5%;
+    margin-top: 5%;
+}
+
+.createListFormButton:hover{
+    background-color: #023E8A;
+    color: white;
+    border: 1px solid #023E8A;
+}
+
+.createListFormButtonSave:hover{
+    background-color: #023E8A;
+    color: white;
+    border: 1px solid #023E8A;
+}
+
+.createListBox form{
+    margin: 0 auto;
+    width: 80%;
+}
+
+.createListBox form label{
+    display: block;
+    margin-top: 2%;
+    margin-bottom: 2%;
+    font-size: 26px;
+}
+
+.createListBox form input[type="text"],
+.createListBox form textarea{
+    width: 98%;
+    padding: 10px;
+    margin-bottom: 2%;
+    margin-left: 1%;
+}
+
 
