dodawanie prezentow do listy WIP

--- a/WishLists/templates/addPresentsToList.html
+++ b/WishLists/templates/addPresentsToList.html
@@ -8,10 +8,10 @@
             <path d="M14.5 3a.5.5 0 0 1 .5.5v9a.5.5 0 0 1-.5.5h-13a.5.5 0 0 1-.5-.5v-9a.5.5 0 0 1 .5-.5zm-13-1A1.5 1.5 0 0 0 0 3.5v9A1.5 1.5 0 0 0 1.5 14h13a1.5 1.5 0 0 0 1.5-1.5v-9A1.5 1.5 0 0 0 14.5 2z"/>
             <path d="M7 5.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 1 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0M7 9.5a.5.5 0 0 1 .5-.5h5a.5.5 0 0 1 0 1h-5a.5.5 0 0 1-.5-.5m-1.496-.854a.5.5 0 0 1 0 .708l-1.5 1.5a.5.5 0 0 1-.708 0l-.5-.5a.5.5 0 0 1 .708-.708l.146.147 1.146-1.147a.5.5 0 0 1 .708 0"/>
         </svg>
-        {{ tytul }}
+        {{ lista.tytul }}
     </h1>
     <h5>
-        {{ opis }}
+        {{ lista.opis }}
     </h5>
     <h1 class="wyrownanieDoLewej">Zawartość:</h1>
 
@@ -64,74 +64,77 @@
             Lista jest obecnie pusta, dodaj prezenty.
         </p>
         {% endif %}
-
+        {% if addPresent is True %}
+        {% csrf_token %}
+         {{ form }}
+        <a href=""><button>Dodaj prezent</button></a>
+        <a href="/edit-list/{{ lista.id }}"><button>Zakończ dodawanie</button></a>
+        {% else %}
+        <a href="add-present/"><button>Dodaj prezenty</button></a>
+        {% endif %}
     </div>
 
-    <form method="post" enctype="multipart/form-data" id="DodajPrezentDoListyForm">
-        {% csrf_token %}
 
-        <div id="prezenty">
-            <!-- Pole na pierwszy prezent -->
-        </div>
-        <div id="guzikAddPresent">
-            <button type="button" class="btn rounded-pill btn-lg createListForm" onclick="addPresentField()">Dodaj
-                następny prezent
-            </button>
-            <button type="submit" class="btn rounded-pill btn-lg createListForm hidden">Dodaj prezent do listy
-            </button>
-            <a href="/myLists/">
-                <button type="button" class="btn rounded-pill btn-lg createListFormR">Zakończ wprowadzanie
-                    prezentów
-                </button>
-            </a>
-        </div>
+
+<!--        <div id="guzikAddPresent">-->
+<!--            <button type="button" class="btn rounded-pill btn-lg createListForm" onclick="addPresentField()">Dodaj-->
+<!--                następny prezent-->
+<!--            </button>-->
+<!--            <button type="submit" class="btn rounded-pill btn-lg createListForm hidden">Dodaj prezent do listy-->
+<!--            </button>-->
+<!--            <a href="/myLists/">-->
+<!--                <button type="button" class="btn rounded-pill btn-lg createListFormR">Zakończ wprowadzanie-->
+<!--                    prezentów-->
+<!--                </button>-->
+<!--            </a>-->
+<!--        </div>-->
 
     </form>
 </div>
 
-<script>
-    var i = 1;
+<!--<script>-->
+<!--    var i = 1;-->
 
-    function removePresentField(button) {
-        button.parentNode.remove();
-        i = 1; // Reset the flag to enable adding new presents
-        toggleButtons();
-    }
+<!--    function removePresentField(button) {-->
+<!--        button.parentNode.remove();-->
+<!--        i = 1; // Reset the flag to enable adding new presents-->
+<!--        toggleButtons();-->
+<!--    }-->
 
-    function addPresentField() {
-        const kolejnyPrezentButton = document.querySelector('#guzikAddPresent button:nth-child(1)');
-        const dodajDoListyButton = document.querySelector('#guzikAddPresent button:nth-child(2)');
+<!--    function addPresentField() {-->
+<!--        const kolejnyPrezentButton = document.querySelector('#guzikAddPresent button:nth-child(1)');-->
+<!--        const dodajDoListyButton = document.querySelector('#guzikAddPresent button:nth-child(2)');-->
 
-        if (i === 1) {
-            const prezentyDiv = document.getElementById("prezenty");
-            const newField = document.createElement("div");
-            newField.innerHTML = `
-                <label>Nazwa prezentu:</label>
-                <input type="text" name="nazwaPrezentu" class="form-control">
-                <button type="button" class="btn btn-sm deleteRightButton" onclick="removePresentField(this)">Usuń prezent</button>
-            `;
+<!--        if (i === 1) {-->
+<!--            const prezentyDiv = document.getElementById("prezenty");-->
+<!--            const newField = document.createElement("div");-->
+<!--            newField.innerHTML = `-->
+<!--                <label>Nazwa prezentu:</label>-->
+<!--                <input type="text" name="nazwaPrezentu" class="form-control">-->
+<!--                <button type="button" class="btn btn-sm deleteRightButton" onclick="removePresentField(this)">Usuń prezent</button>-->
+<!--            `;-->
 
-            prezentyDiv.appendChild(newField);
+<!--            prezentyDiv.appendChild(newField);-->
 
-            toggleButtons();
-            i = 2;
-        }
-    }
+<!--            toggleButtons();-->
+<!--            i = 2;-->
+<!--        }-->
+<!--    }-->
 
-    function toggleButtons() {
-        const kolejnyPrezentButton = document.querySelector('#guzikAddPresent button:nth-child(1)');
-        const dodajDoListyButton = document.querySelector('#guzikAddPresent button:nth-child(2)');
+<!--    function toggleButtons() {-->
+<!--        const kolejnyPrezentButton = document.querySelector('#guzikAddPresent button:nth-child(1)');-->
+<!--        const dodajDoListyButton = document.querySelector('#guzikAddPresent button:nth-child(2)');-->
 
-        kolejnyPrezentButton.classList.toggle('hidden');
-        dodajDoListyButton.classList.toggle('hidden');
-    }
+<!--        kolejnyPrezentButton.classList.toggle('hidden');-->
+<!--        dodajDoListyButton.classList.toggle('hidden');-->
+<!--    }-->
 
-    // Reverting to the initial state after clicking "Dodaj prezent do listy"
-    document.querySelector('#guzikAddPresent button:nth-child(2)').addEventListener('click', function () {
-        i = 1;
-        toggleButtons();
-    });
-</script>
+<!--    // Reverting to the initial state after clicking "Dodaj prezent do listy"-->
+<!--    document.querySelector('#guzikAddPresent button:nth-child(2)').addEventListener('click', function () {-->
+<!--        i = 1;-->
+<!--        toggleButtons();-->
+<!--    });-->
+<!--</script>-->
 
 
 {% endblock %}
