--- a/WishLists/templates/myGiftReservations.html
+++ b/WishLists/templates/myGiftReservations.html
@@ -31,7 +31,7 @@
                         <tbody>
                         {% for lista_id, lista_info in prezenty_na_listach.items %}
 
-                            {% for prezent_info in lista_info.prezenty %}
+                        {% for prezent_info in lista_info.prezenty %}
                         <tr class="inner-box">
                             <td>
                                 <div class="reservationsText">
@@ -86,17 +86,18 @@
 
                     {% else %}
                     <div class="text-center noFriends">
-                            <h1>Brak dostępnych list!</h1>
-                            <h2>Najpierw dodaj znajomego albo znajomy musi stworzyć listę.</h2>
-                            <a href="/search-for-user">
-                                <button class="btn btn-lg rounded-pill NoFriendsButtons">
-                                    <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor" class="bi bi-search" viewBox="0 0 16 16">
-                                      <path d="M11.742 10.344a6.5 6.5 0 1 0-1.397 1.398h-.001c.03.04.062.078.098.115l3.85 3.85a1 1 0 0 0 1.415-1.414l-3.85-3.85a1.007 1.007 0 0 0-.115-.1zM12 6.5a5.5 5.5 0 1 1-11 0 5.5 5.5 0 0 1 11 0"/>
-                                    </svg>
-                                    Wyszukaj znajomego
-                                </button>
-                            </a>
-                        </div>
+                        <h1>Brak rezerwacji!</h1>
+                        <h2>Najpierw zarezerwuj prezent na liście znajomego.</h2>
+                        <a href="/friendsLists">
+                            <button class="btn btn-lg rounded-pill reservationsButtonSearch">
+                                <svg xmlns="http://www.w3.org/2000/svg" width="28" height="28" fill="currentColor"
+                                     class="bi bi-people-fill" viewBox="0 0 16 16">
+                                    <path d="M7 14s-1 0-1-1 1-4 5-4 5 3 5 4-1 1-1 1zm4-6a3 3 0 1 0 0-6 3 3 0 0 0 0 6m-5.784 6A2.238 2.238 0 0 1 5 13c0-1.355.68-2.75 1.936-3.72A6.325 6.325 0 0 0 5 9c-4 0-5 3-5 4s1 1 1 1zM4.5 8a2.5 2.5 0 1 0 0-5 2.5 2.5 0 0 0 0 5"/>
+                                </svg>
+                                Listy znajomych
+                            </button>
+                        </a>
+                    </div>
                     {% endif %}
                 </div>
             </div>
